name:                try-haskell-lens
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/try-haskell-lens#readme
license:             BSD3
license-file:        LICENSE
author:              Greg Wiley
maintainer:          aztec.rex@jammm.com
copyright:           2017 Greg Wiley
category:            Try
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , lens-tutorial
                     , lens
  default-language:    Haskell2010

executable try-haskell-lens-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , try-haskell-lens
  default-language:    Haskell2010

test-suite try-haskell-lens-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , try-haskell-lens
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aztecrex/try-haskell-lens

